--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #eeeeee
+    background-color: #eeeeee;
 }
 
 .grid {
@@ -11,23 +11,28 @@ body {
     border-radius: 50px;
     border: 2px solid #cbcbcb;
     box-shadow: 10px 15px 5px #cbcbcb;
-
 }
 
 .grid h1 {
-    font-family: sans-serif;
+    font-family: "sans-serif";
     background-color: #57636e;
     font-size: 60px;
     text-align: center;
-    color: #fff;
+    color: #ffffff;
     padding: 2px 0;
     border-radius: 50px;
 }
 
-.grid #question {
-    font-family: sans-serif;
+#score {
+    color: #5A6772;
+    text-align: center;
     font-size: 30px;
-    color: #5a6772;
+}
+
+.grid #question {
+    font-family: "monospace";
+    font-size: 30px;
+    color: #5A6772;
 }
 
 .buttons {
@@ -37,16 +42,12 @@ body {
 #btn0, #btn1, #btn2, #btn3 {
     background-color: #778897;
     width: 250px;
+    font-size: 20px;
     color: #fff;
-    border: 1px solid #1d3c6a;
+    border: 1px solid #1D3C6A;
     border-radius: 50px;
     margin: 10px 40px 10px 0;
     padding: 10px 10px;
-}
-
-#progress {
-    color: #2b2b2b;
-    font-size: 18px;
 }
 
 #btn0:hover, #btn1:hover, #btn2:hover, #btn3:hover {
@@ -56,4 +57,9 @@ body {
 
 #btn0:focus, #btn1:focus, #btn2:focus, #btn3:focus {
     outline: 0;
+}
+
+#progress {
+    color: #2b2b2b;
+    font-size: 18px;
 }
